# airflow-docker

./: .cursorignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose_.yaml  pyproject.toml  requirements.txt
dags/: hello_dag.py
dags/shared/: __init__.py  config.py
dags/shared/config/: settings.py
dags/shared/utils/: __init__.py  logger.py
